# OtterBot

./: .gitignore  .gitmodules  CMakeLists.txt
include/data/: CSVData.h  IBKRHisData.h
include/event/: DataUpdateEvent.h  Event.h  EventDispatcher.h  EventType.h  OrderEvent.h  OrderFillEvent.h  OrderRejectEvent.h
include/execution/: BacktestHandler.h  ExecutionHandler.h
include/ibkr/: IBKRErr.h  IBKRUtils.h
include/index/: MA.h
include/portfolio/: Portfolio.h
include/strategy/: SMACrossStrategy.h  Strategy.h  TestStrategy.h
otterbot/: CSVBarDataFeed.cpp  CSVBarDataFeed.h  Data.h  DataFeed.h  Strategy.h  aapl.csv  main.cpp
src/: otterbot.cpp
src/data/: CSVData.cpp  IBKRHisData.cpp
src/event/: EventDispatcher.cpp
src/execution/: BacktestHandler.cpp
src/portfolio/: Portfolio.cpp
src/strategy/: SMACrossStrategy.cpp  TestStrategy.cpp
tests/: ibkrbot.cpp  otterbot.cpp
